sbatch_out_files/MERRA2.4478841.out
  File "print_wget_commands.py", line 64
    surface_str = "https://goldsmr4.gesdisc.eosdis.nasa.gov/opendap/MERRA2/M2T1NXSLV.5.12.4/ + " str(day_year) + "/" + str(day_month) + "/MERRA2_" + str(stream) + "00.tavg1_2d_slv_Nx." + str(day_str) + ".nc4.nc4?H500[0:23][0:100][0:575],PS[0:23][0:100][0:575],QV2M[0:23][0:100][0:575],T2M[0:23][0:100][0:575],TS[0:23][0:100][0:575],U10M[0:23][0:100][0:575],V10M[0:23][0:100][0:575],time,lat[0:100],lon[0:575]\n"
                                                                                                   ^
SyntaxError: invalid syntax
rm: cannot remove ‘HTTP*’: No such file or directory
rm: cannot remove ‘tmp*’: No such file or directory
wget_surface.sh: No such file or directory
No URLs found in wget_surface.sh.
